[platform] startup action script serialization compatibility
(cherry-picked from commit 3ef0bd4814c3826327adaf9f4a3d5412b9da541d)

IJ-CR-7183

(cherry picked from commit a9756fe66c31309d9cef38e70b73f76add805702)

IJ-CR-7889

GitOrigin-RevId: 2a5a61ba580ae0730a2b749e2532cffeb91d1efe